[workspace]

members = [
    'beginners/abc049_c',
    'beginners/abc081_a',
    'beginners/abc081_b',
    'beginners/abc083_b',
    'beginners/abc085_b',
    'beginners/abc085_c',
    'beginners/abc086_a',
    'beginners/abc086_c',
    'beginners/abc087_b',
    'beginners/abc088_b',
    'beginners/practice_a',
]
